Fixed feature arrows positioning on mobile FF

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -142,6 +142,7 @@ header {
   width: 50px;
   height: 50px;
   background: white;
+  pointer-events: none;
 
   animation: ripple-animation 2s;
 }
@@ -184,7 +185,9 @@ header {
 
     &:after {
       content: '»';
-      float: right;
+      position: absolute;
+      right: 5px;
+      top: 6px;
       color: rgba(0, 0, 0, 0.2);
       font-size: larger;
     }
